// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat component check the input form is enabled 1`] = `
<div>
  <div
    className="MessageList-messages-2"
  />
  <div
    className="InputBlock-block-7"
  >
    <input
      className="InputBlock-input-9"
      name="text"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Message"
      type="text"
      value=""
    />
    <button
      className="InputBlock-button-8"
      onClick={[Function]}
    >
      Send
    </button>
  </div>
</div>
`;

exports[`Chat component check the login is enabled 1`] = `
<div>
  <div
    className="MessageList-messages-2"
  />
  <div
    className="InputBlock-block-7"
  >
    <input
      className="InputBlock-input-9"
      name="text"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <button
      className="InputBlock-button-8"
      onClick={[Function]}
    >
      Login
    </button>
  </div>
</div>
`;
